add hamburger menu in md to sm screen

--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
     <title>Full Stack Mastery</title>
   </head>
   <body>
+    <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container">
         <a href="#" class="navbar-brand">Full Stack Mastery</a>
 
+        <!-- toggle hamburger button on md to sm screen -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- collapse menu on md to sm screen  -->
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
