showcase of website

--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
         </div>
       </div>
     </nav>
+
+    <!-- showcase -->
+    <section class="bg-dark text-light p-5 text-center">
+      <div class="container">
+        <div class="d-sm-flex">
+          <div>
+            <h1>
+              Become a <span class="text-warning">Full Stack Developer</span>
+            </h1>
+
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+              cupiditate corrupti cum voluptatibus aliquam deleniti, molestiae
+              mollitia distinctio perferendis expedita.
+            </p>
+          </div>
+          <img
+            class="img-fluid w-50"
+            src="showcase.png"
+            alt="web development"
+          />
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
