--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </nav>
 
     <!-- showcase -->
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <section
+      class="bg-dark text-light p-5 p-lg-0 pt-lg-4 text-center text-sm-start"
+    >
       <div class="container">
         <div class="d-sm-flex align-items-center justify-content-between">
           <div>
@@ -67,6 +69,20 @@
             src="showcase.png"
             alt="web development"
           />
+        </div>
+      </div>
+    </section>
+
+    <!-- NewsLetter -->
+    <section class="bg-primary text-light p-5">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+          <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+
+          <div class="input-group news-input">
+            <input type="text" class="form-control" placeholder="Enter Email" />
+            <button class="btn btn-dark btn-lg" type="button">Button</button>
+          </div>
         </div>
       </div>
     </section>
