fundamentals section of page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Boxes -->
     <section class="p-5">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center g-4">
           <div class="col-md">
             <div class="card bg-dark text-light">
               <div class="card-body text-center">
@@ -139,6 +139,34 @@
                 <a href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Learn Sections -->
+    <section id="learn" class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <img src="fundamentals.png" class="img-fluid" alt="" />
+          </div>
+          <div class="col-md p-5">
+            <h2>Learn The Fundamentals</h2>
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptate odio veniam nesciunt pariatur, minima veritatis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Obcaecati optio autem, accusantium, recusandae fugiat, corporis
+              laboriosam aspernatur maxime facere delectus incidunt officiis?
+              Porro provident ratione facere totam blanditiis corrupti
+              voluptatum?
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
           </div>
         </div>
       </div>
