--- a/index.html
+++ b/index.html
@@ -172,6 +172,33 @@
       </div>
     </section>
 
+    <section id="learn" class="p-5 bg-dark text-light">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md p-5">
+            <h2>Learn React with Redux</h2>
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptate odio veniam nesciunt pariatur, minima veritatis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Obcaecati optio autem, accusantium, recusandae fugiat, corporis
+              laboriosam aspernatur maxime facere delectus incidunt officiis?
+              Porro provident ratione facere totam blanditiis corrupti
+              voluptatum?
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
+          </div>
+          <div class="col-md">
+            <img src="React.png" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
